--- a/tasks/genetics/genetics.scss
+++ b/tasks/genetics/genetics.scss
@@ -1,3 +1,5 @@
+#kio-genetics-holder {position:relative; margin:20px 0; height:350px;border:thin solid red;}
+
 .number-input {
   width: 3em;
   font-size: 1.4em;
