scaling + reinit temp fix

--- a/tasks/genetics/genetics.scss
+++ b/tasks/genetics/genetics.scss
@@ -1,4 +1,9 @@
-#kio-genetics-holder {position:relative; margin:20px 0; height:350px;border:thin solid red;}
+#kio-genetics-holder {
+  position:relative;
+  margin:20px 0;
+}
+
+#kio-genetics-holderCanvas {width:100%;}
 
 .number-input {
   width: 3em;
