steppers finished; temp inputs removed

--- a/tasks/genetics/genetics.scss
+++ b/tasks/genetics/genetics.scss
@@ -1,11 +1,2 @@
-#kio-genetics-holder {
-  position:relative;
-  margin:20px 0;
-}
-
+#kio-genetics-holder {position:relative;margin:20px 0;}
 #kio-genetics-holderCanvas {width:100%;}
-
-.number-input {
-  width: 3em;
-  font-size: 1.4em;
-}
